--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ Module.symvers
 Mkfile.old
 dkms.conf
 *.log
+Project1/cmake-build-debug/.ninja_deps
+Project1/cmake-build-debug/.ninja_log
+Project1/cmake-build-debug/Project1
+Project1/cmake-build-debug/Testing/Temporary/LastTest.log
